# drelegrambot

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.bot  Feature.md  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  subscriptions.db  user_settings.db
data_storage/: matrix_15m.npz  matrix_1d.npz  matrix_1h.npz  matrix_1m.npz  matrix_1w.npz  matrix_2h.npz  matrix_3d.npz  matrix_4h.npz  matrix_5m.npz
src/: __init__.py  api.py  config.py  crypto_manager.py  database.py  handlers.py  keyboards.py  main.py  payment.py  payment_manager.py  start.py  token_manager.py  transaction_verifier.py  utils.py
src/backend/: Data_Collector.py  Unified_Collector.py  bot_handlers.py  config.py  database.py  gemeni.py  health_checker.py  image_generator.py  main.py  market_engine.py  readme.md  services.py  strees_test.py
stress_outputs/: results.csv
