[project]
name = "drelegrambot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.8.0",
    "asyncpg==0.31.0",
    "httpx>=0.24.0",
    "jdatetime>=4.0.0",
    "pillow>=9.0.0",
    "psutil>=5.9.0",
    "python-dotenv==1.2.1",
    "python-json-logger==2.0.7",
    "python-telegram-bot[job-queue]>=20.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
